...
        android:contentDescription="@string/choose_location"/>

    <AutoCompleteTextView
        android:drawableRight="@drawable/ic_search"
        android:drawableEnd="@drawable/ic_search"
        android:tint="@color/colorAccent"
        android:id="@+id/search_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
...
            style="?android:attr/borderlessButtonStyle"
            android:onClick="onCancelButtonClick"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextButton"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next"
            android:textAllCaps="true"
            android:background="@color/transparent"
...
