<resources>
    <string name="app_name">Winder</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="temp_interval">Temperature:</string>
    <string name="nedboer_intervall">Precipitation:</string>
    <string name="vind_styrke">Windspeed:</string>
    <string name="vind_retning">Wind direction:</string>
...
    <string name="cancel">Cancel</string>
    <string name="toast_more_then_ten_alerts">Warning! Alertlist is fully populated, delet one to make room</string>
    <string name="yr_credits">Weather data provided by Yr.no</string>
    <string name="last_update">Last update:</string>
    <string name="empty_list_text">Winder finds a matching weather for you</string>
    <string name="manual_refresh">Updating forecasts...</string>
    <string name="settings_for_alert">Choose preferences for alert</string>
    <!-- AlertOverViewActivity-->
    <string name="title_activity_alert_over_view">AlertOverViewActivity</string>
    <string name="your_preferences">Your preferences:</string>
    <string name="check_interval">Check interval: </string>
    <string name="settings">Settings</string>
    <string name="eventlist">Events</string>
...
    <string name="checkinterval_twelve">Every 12 hour</string>
    <string name="checkinterval_day">Every 24 hour</string>
    <string name="checkinterval_twodays">Every 48 hour</string>


    <!--AlertPreferences-->
    <string name="preferences_temperature">Temperature</string>
    <string name="preferences_temperature_scale">\u2103</string>
    <string name="preferences_precipitation">Precipitation</string>
    <string name="preferences_precipitation_amount_period">mm, per 6 hour period</string>
    <string name="preferences_windspeed">Windspeed</string>
    <string name="preferences_windspeed_description">m/s</string>
    <string name="preferences_winddir">Wind direction</string>
    <string name="preferences_weekdays_check">Weekdays for check</string>
    <string name="preferences_interval">Check interval</string>
...
    <string name="E">East</string>
    <string name="ENE">East-Northeast</string>
    <string name="NE">Northeast</string>
    <string name="NNE">North-Northeast</string>

    <!--Strings for appsettings-->
    <string name="settings_header">SETTINGS</string>
    <string name="connection_header">Connection settings</string>
    <string name="pref_connection_summary">Use mobile data for weather-updates</string>
    <string name="pref_use_mobile_data">Mobile data</string>

    <string name="language_header">Language</string>
    <string name="pref_language_summary">Not selected</string>
    <string name="pref_chose_language">Change language</string>
    <string name="language_default">System Default</string>
    <string name="languagelist_default">default</string>
    <string name="language_norwegian">Norwegian</string>
    <string name="language_english">English</string>
    <string name="language_pref_key">prefLanguage</string>
    <string name="no_last_update">Not found</string>
    <string name="get_started">Press + to get started</string>
    <string name="mobile_network_pref_key">prefUseMobileData</string>

</resources>

